add_executable(Problem001 Problem001.cpp)
add_executable(Problem002 Problem002.cpp)
add_executable(Problem003 Problem003.cpp)
add_executable(Problem004 Problem004.cpp)
add_executable(Problem005 Problem005.cpp)
add_executable(Problem006 Problem006.cpp)
add_executable(Problem007 Problem007.cpp)
add_executable(Problem008 Problem008.cpp)
add_executable(Problem009 Problem009.cpp)
add_executable(Problem010 Problem010.cpp)
add_executable(Problem011 Problem011.cpp)
add_executable(Problem012 Problem012.cpp)
add_executable(Problem013 Problem013.cpp)
add_executable(Problem014 Problem014.cpp)
add_executable(Problem015 Problem015.cpp)
add_executable(Problem016 Problem016.cpp)
add_executable(Problem017 Problem017.cpp)
add_executable(Problem018 Problem018.cpp)
add_executable(Problem020 Problem020.cpp)
add_executable(Problem021 Problem021.cpp)
add_executable(Problem022 Problem022.cpp)
add_executable(Problem023 Problem023.cpp)
add_executable(Problem024 Problem024.cpp)
add_executable(Problem025 Problem025.cpp)
add_executable(Problem026 Problem026.cpp)
add_executable(Problem027 Problem027.cpp)
add_executable(Problem028 Problem028.cpp)
add_executable(Problem029 Problem029.cpp)
add_executable(Problem030 Problem030.cpp)
add_executable(Problem032 Problem032.cpp)
add_executable(Problem033 Problem033.cpp)
add_executable(Problem034 Problem034.cpp)
add_executable(Problem035 Problem035.cpp)
add_executable(Problem036 Problem036.cpp)
add_executable(Problem037 Problem037.cpp)
add_executable(Problem038 Problem038.cpp)
add_executable(Problem039 Problem039.cpp)
add_executable(Problem040 Problem040.cpp)
add_executable(Problem041 Problem041.cpp)
add_executable(Problem042 Problem042.cpp)
add_executable(Problem043 Problem043.cpp)
add_executable(Problem045 Problem045.cpp)
add_executable(Problem046 Problem046.cpp)
add_executable(Problem047 Problem047.cpp)
add_executable(Problem048 Problem048.cpp)
target_link_libraries(Problem048 StrNum_lib)
add_executable(Problem049 Problem049.cpp)
add_executable(Problem050 Problem050.cpp)
