add_executable(Problem052 Problem052.cpp)
add_executable(Problem053 Problem053.cpp)
add_executable(Problem054 Problem054.cpp)
add_executable(Problem055 Problem055.cpp)
target_link_libraries(Problem055 StrNum_lib)
add_executable(Problem056 Problem056.cpp)
target_link_libraries(Problem056 StrNum_lib)
add_executable(Problem057 Problem057.cpp)
target_link_libraries(Problem057 StrNum_lib)
add_executable(Problem058 Problem058.cpp)
add_executable(Problem059 Problem059.cpp)
add_executable(Problem063 Problem063.cpp)
target_link_libraries(Problem063 StrNum_lib)
add_executable(Problem071 Problem071.cpp)
add_executable(Problem079 Problem079.cpp)
target_link_libraries(Problem079 StrNum_lib)
add_executable(Problem097 Problem097.cpp)
add_executable(Problem092 Problem092.cpp)
